--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -14,7 +14,14 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # ===============================
 # JPA / Hibernate Configuration
 # ===============================
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+# ===============================
+# Spring Security Configuration
+# ===============================
+
+jwt.token.secret=${JWT_SECRET}
+jwt.token.expiration.millis=${JWT_EXP}
