url error will be given on responce and terminal debugging will be given

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -25,3 +25,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 jwt.token.secret=${JWT_SECRET}
 jwt.token.expiration.millis=${JWT_EXP}
+
+#Added for terminal debugging messages
+logging.level.org.springframework.web=DEBUG
