feat:razorpay payment integration in backend

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -26,5 +26,16 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 jwt.token.secret=${JWT_SECRET}
 jwt.token.expiration.millis=${JWT_EXP}
 
+# ===============================
+# Razorpay Payment Configuration
+# ===============================
+
+razorpay.key.id=${RAZORPAY_KEY}
+razorpay.key.secret=${RAZORPAY_SECRET}
+
+
+logging.level.com.cdac.MovieBooking=INFO
+
+
 #Added for terminal debugging messages
 logging.level.org.springframework.web=DEBUG
