--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,41 +1,39 @@
+DB_USERNAME=D5-93027-OJASVI
+DB_PASSWORD=manager
+
+JWT_SECRET=xcaibd3874e8dcbw98e9639db9w247dcdiwud%^cbief
+JWT_EXP=36000000
+
+RAZORPAY_KEY=rzp_test_NTPxc3bjQjC8Em
+RAZORPAY_SECRET=C72IFsGmJOW5dWm1tm8aO6Xs
+
 # ===============================
 # Application Info
 # ===============================
 spring.application.name=MovieBooking
 
 # ===============================
-# Database Configuration (MySQL)
+# Database Configuration
 # ===============================
 spring.datasource.url=jdbc:mysql://localhost:3306/movie_booking?createDatabaseIfNotExist=true
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # ===============================
-# JPA / Hibernate Configuration
+# JPA / Hibernate
 # ===============================
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 # ===============================
-# Spring Security Configuration
+# Security
 # ===============================
-
 jwt.token.secret=${JWT_SECRET}
 jwt.token.expiration.millis=${JWT_EXP}
 
 # ===============================
-# Razorpay Payment Configuration
+# Razorpay
 # ===============================
-
 razorpay.key.id=${RAZORPAY_KEY}
 razorpay.key.secret=${RAZORPAY_SECRET}
-
-
-logging.level.com.cdac.MovieBooking=INFO
-
-
-#Added for terminal debugging messages
-logging.level.org.springframework.web=DEBUG
